--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "tsc && node dist/index.js",
     "lint": "eslint src/**/*.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register 'tests/**/*.test.ts'"
   },
   "repository": {
     "type": "git",
@@ -19,14 +19,22 @@
   },
   "homepage": "https://github.com/dreangine/voting-system#readme",
   "dependencies": {
+    "nanoid": "3.1.30",
     "typescript": "4.5.3"
   },
   "devDependencies": {
+    "@types/chai": "4.3.0",
+    "@types/chai-spies": "^1.0.3",
+    "@types/mocha": "9.0.0",
     "@typescript-eslint/eslint-plugin": "5.7.0",
     "@typescript-eslint/parser": "5.7.0",
+    "chai": "4.3.4",
+    "chai-spies": "^1.0.0",
     "eslint": "8.4.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
-    "prettier": "2.5.1"
+    "mocha": "9.1.3",
+    "prettier": "2.5.1",
+    "ts-node": "10.4.0"
   }
 }
