--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
   },
   "devDependencies": {
     "@types/chai": "4.3.0",
-    "@types/chai-spies": "^1.0.3",
+    "@types/chai-spies": "1.0.3",
     "@types/mocha": "9.0.0",
     "@typescript-eslint/eslint-plugin": "5.7.0",
     "@typescript-eslint/parser": "5.7.0",
     "chai": "4.3.4",
-    "chai-spies": "^1.0.0",
+    "chai-spies": "1.0.0",
     "eslint": "8.4.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
