--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
   "plugins": ["prettier", "@typescript-eslint"],
   "rules": {
     "eqeqeq": "error",
-    // "no-console": "warn",
+    "no-console": "warn",
     "no-undef": "off",
     "no-unused-vars": "off",
     "prettier/prettier": ["error", { "semi": false }],
