--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   },
   "homepage": "https://github.com/dreangine/voting-system#readme",
   "dependencies": {
-    "nanoid": "3.1.30",
-    "typescript": "4.5.3"
+    "nanoid": "3.1.30"
   },
   "devDependencies": {
     "@types/chai": "4.3.0",
@@ -37,6 +36,7 @@
     "eslint-plugin-prettier": "4.0.0",
     "mocha": "9.1.3",
     "prettier": "2.5.1",
-    "ts-node": "10.4.0"
+    "ts-node": "10.4.0",
+    "typescript": "4.5.4"
   }
 }
