--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
       "*": ["./node_modules/*"]
     }
   },
-  "exclude": ["src/**/*.test.ts"]
+  "exclude": ["src/**/*.test.ts", "dist/**/*"]
 }
