--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "tsc && node dist/index.js",
     "lint": "eslint src/**/*.ts",
-    "test": "mocha -r ts-node/register 'src/**/*.test.ts'"
+    "test": "mocha -r ts-node/register 'src/**/*.test.ts'",
+    "coverage": "nyc nyc --reporter=lcov npm run test"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "nanoid": "3.1.30"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "1.0.2",
     "@types/chai": "4.3.0",
     "@types/chai-as-promised": "7.1.4",
     "@types/chai-spies": "1.0.3",
@@ -35,6 +37,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "mocha": "9.1.3",
+    "nyc": "15.1.0",
     "prettier": "2.5.1",
     "ts-node": "10.4.0",
     "typescript": "4.5.4"
