--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc",
     "start": "tsc && node dist/index.js",
     "lint": "eslint src/**/*.ts",
     "test": "mocha -r ts-node/register 'src/**/*.test.ts'",
-    "coverage": "nyc nyc --reporter=lcov npm run test"
+    "coverage": "nyc nyc --reporter=lcov npm run test",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -19,6 +22,13 @@
     "url": "https://github.com/dreangine/voting-lib/issues"
   },
   "homepage": "https://github.com/dreangine/voting-lib#readme",
+  "np": {
+    "yarn": false,
+    "contents": "dist"
+  },
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "nanoid": "3.1.30"
   },
