--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "tsc",
     "start": "tsc && node dist/index.js",
     "lint": "eslint src/**/*.ts",
-    "test": "mocha -r ts-node/register 'tests/**/*.test.ts'",
+    "test": "mocha -r ts-node/register 'test/**/*.test.ts'",
     "coverage": "nyc nyc --reporter=lcov npm run test",
     "prepublish": "npm run build"
   },
