--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "lint": "eslint src/**/*.ts",
     "test": "mocha -r ts-node/register 'test/**/*.test.ts'",
     "coverage": "nyc nyc --reporter=lcov npm run test",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "examples:election": "npm run build && node examples/election.mjs",
+    "examples:judgement": "npm run build && node examples/judgement.mjs"
   },
   "engines": {
     "node": ">=14.0.0"
