Removed nanoid dependency

--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
   "files": [
     "dist"
   ],
-  "dependencies": {
-    "nanoid": "3.1.31"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "1.0.2",
     "@types/chai": "4.3.0",
