Fixed nyc coverage command

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "tsc && node dist/index.js",
     "lint": "eslint src/**/*.ts",
     "test": "mocha -r ts-node/register 'test/**/*.test.ts'",
-    "coverage": "nyc nyc --reporter=lcov npm run test",
+    "coverage": "nyc npm run test",
     "prepublish": "npm run build",
     "examples:election": "npm run build && node examples/election.mjs",
     "examples:judgment": "npm run build && node examples/judgment.mjs"
