--- a/.nycrc
+++ b/.nycrc
@@ -1,4 +1,8 @@
 {
   "extends": "@istanbuljs/nyc-config-typescript",
-  "check-coverage": true
+  "check-coverage": true,
+  "reporter": [
+    "text",
+    "lcov"
+  ]
 }
