--- a/.eslintrc
+++ b/.eslintrc
@@ -10,8 +10,9 @@
     "no-undef": "off",
     "no-unused-vars": "off",
     "prettier/prettier": ["error", { "semi": false }],
-    "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "warn",
+    "@typescript-eslint/explicit-function-return-type": "warn",
+    "@typescript-eslint/naming-convention": "warn",
     "@typescript-eslint/no-explicit-any": "error",
     "@typescript-eslint/no-unused-vars": "warn"
   },
